--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ives van Hoorne",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.6",
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
   }
