--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.6",
     "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5"
   }
 }
