--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.6",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
+    "openai": "^4.57.0",
     "socket.io": "^4.7.5"
   }
 }
